syntax = "proto3";
package certusone.wormholechain.tokenbridge;

option go_package = "github.com/certusone/wormhole-chain/x/tokenbridge/types";



message ChainRegistration {
  uint32 chainID = 1;
  bytes emitterAddress = 2;
}

